--- a/myBlogWeb/templates/blog_detail.html
+++ b/myBlogWeb/templates/blog_detail.html
@@ -118,9 +118,9 @@
                                         点击加载更多
                                     </button>
                                 </div>
-                                <div v-show="comment_list.length==0">
+                                <!-- <div v-show="comment_list.length==0">
                                     <h6 style="text-align: center;color: #8a9aa9;">暂无评论QAQ</h3>
-                                </div>
+                                </div> -->
                                 <div v-show="!more">
                                     <h6 style="text-align: center;color: #8a9aa9;">到底了QAQ</h3>
                                 </div>
