--- a/myBlogWeb/static/css/menu.css
+++ b/myBlogWeb/static/css/menu.css
@@ -1,6 +1,6 @@
 .my_menu {
     background-color: #f4f5f5;
-    width: 200px;
+    width: 80%;
     margin-top: 30px;
     white-space: nowrap; 
     /* z-index: 999999; */
