--- a/myBlogWeb/static/css/myblog.css
+++ b/myBlogWeb/static/css/myblog.css
@@ -102,7 +102,7 @@
 }
 
 .my-blog {
-    margin-left: 350px;
+    margin-left: 22%;
     width: 70%;
     margin-top: 15px;
     margin-bottom: 20px;
@@ -112,7 +112,7 @@
 }
 
 .div-left{
-    width: 700px;
+    width: 60%;
 }
 
 .div-right{
