--- a/myBlogWeb/static/css/myblog.css
+++ b/myBlogWeb/static/css/myblog.css
@@ -220,7 +220,7 @@
 }
 
 .my-blog .content-row .content{
-    width: 430px;
+    width: 60%;
     height: 100%;
     float: left;
     /* max-height: 100px;
