--- a/myBlogWeb/static/css/myblog-mobile.css
+++ b/myBlogWeb/static/css/myblog-mobile.css
@@ -142,7 +142,7 @@
     } */
     
     .my-blog .content-row .content{
-        width: 350px;
+        width: 100%;
         height: 100%;
         float: left;
         margin-top: 10px;
