--- a/myBlogWeb/static/css/myblog.css
+++ b/myBlogWeb/static/css/myblog.css
@@ -102,8 +102,8 @@
 }
 
 .my-blog {
-    margin-left: 22%;
-    width: 70%;
+    margin-left: 20%;
+    width: 90%;
     margin-top: 15px;
     margin-bottom: 20px;
     display: inline-block;
@@ -139,6 +139,7 @@
     width: 320px;
     margin-left: 20px;
     background-color: white;
+    max-width: 300px;
     /* margin-left: 720px; */
 }
 
